2007-01-23  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		added dummy menu entries for scale bar and text. triggers
		"not implemented yet" warnings.

	* src/de/intevation/printlayout/i18n/messages.properties,
	  src/de/intevation/printlayout/i18n/messages_de.properties:
		added messages for menu entries and warning

2007-01-22  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/DocumentManager.java:
		The Batik PrintTranscoder scales and translates the
		whole document down to the printable area of the
		selected printer. To compensate this effect an
		inverse affine transform is concatenated to the
		printers Graphics2D context before it is handed
		over to the PrintTranscoder.

	* src/de/intevation/printlayout/LayoutFrame.java,
	  src/de/intevation/printlayout/tools/OnScreenBox.java:
		removed needless imports.

2007-01-22  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		- add full extend, zoom step in/out buttons to toolbar
		- store last directory used in file choosers.

2007-01-22  Ludwig Reiter  <ludwig.reiter@intevation.de>

	* src/de/intevation/printlayout/I18N.java:
		added two methods to get a label and a mnemonic key
		from a bundle string.

	* src/de/intevation/printlayout/LayoutFrame.java:
		added hotkeys to the menu of this frame.
	
	* src/de/intevation/printlayout/i18n/messages_de.properties:
		added '&'s to the messages to mark the hotkeys.

2007-01-22  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutCanvas.java:
		if a damaged region is set enlarge in repaint(...)-request
		the region to repaint.

	* src/de/intevation/printlayout/tools/PickingInteractor.java:
		track damaged region of the overlay and set in LayoutCanvas

	* src/de/intevation/printlayout/tools/OnScreenBox.java:
		- enlarge damaged region