@@ -1,3 +1,8 @@
+2007-01-23  Ludwig Reiter  <ludwig.reiter@intevation.de>
+	
+	* src/de/intevation/printlayout/LayoutFrame.java:
+		added icons for the toggle buttons.
+
 2007-01-23  Sascha L. Teichmann  <sascha.teichmann@intevation.de>
 
 	* src/de/intevation/printlayout/LayoutFrame.java:
